Changes images and contents

--- a/cloud-vps-linux.html
+++ b/cloud-vps-linux.html
@@ -519,24 +519,30 @@
             <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> What are the benefits of VPS Hosting?</a>
               <div class="acco-des">With VPS, you get complete isolation on a physical server for your hosting. Your Virtual Private Server will be unaffected by other users and with root access you can install whatever applications you require on your server. The CPU, RAM, HDD, and Bandwidth allocated to your VPS Hosting package will always be available for your applications. A VPS server gives you all the features of a Dedicated server at an affordable price.</div>
             </div>
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> What is KVM VPS Server Technology?</a>
-              <div class="acco-des">KVM (Kernel-based Virtual Machine) is a type of Virtualization interface in Linux servers which ensures fantastic performance and security while guaranteeing highly optimized resource isolation. Use of KVM in our VPS Servers allows us to deliver tremendous processing power and throughput that your applications / websites need.</div>
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Should I Choose Managed or Unmanaged VPS Hosting?</a>
+              <div class="acco-des">If you are looking for an easy upgrade from your Shared Hosting account and want to continue using an intuitive control panel like cPanel, we recommend that you select a Managed VPSaccount. Our expert support team can even seamlessly migrate your existing website into a Managed VPS for free!
+
+If, on the other hand, you are an experienced developerwho is comfortable working with command line and want root access so you can fully customize your server, an Unmanaged VPS would be a better option for you.</div>
             </div>
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Can I get additional Dedicated IPs on the VPS Server?</a>
-              <div class="acco-des">Yes, you can purchase dedicated IPs at an additional cost.</div>
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Why Should I Have Prohost Managed my VPS?</a>
+              <div class="acco-des">When you think of VPS Hosting, you probably think of a hosting solution featuring more resources and more power. You're certainly correct on both accounts. You may also think that a VPS is designed only for web developers with years of experience. This may be the case at some hosting providers. That's not the case at ProHost Hosting.
+
+Our Managed VPS plans include the user-friendly cPanel control panel that you use and love on our Web Hosting plans. That means you get the power and resources of a VPS, but the same ease of use found with our Web Hosting plans. It's the best of both worlds!.</div>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="accordion-close accordion-07">
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> How does web hosting work?</a>
-              <div class="acco-des">Prohost provides complete support on all our VPS Hosting Plans for issues that are related to Boot, Network, Hardware, Login and Re-installation of the VM. This also includes basic firewall setup and preliminary investigation of any system exploits. For the complete scope of support, please refer to the technical specifications section.</div>
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Do I Get Root Level Access With Managed VPS?</a>
+              <div class="acco-des">Yes, our Managed Virtual Private Server plans are user-friendly. That's not to say we don't have virtual private servers plans designed for more advanced users. Our Managed VPS Hosting also includes administrative level, root access and management via code line!</div>
             </div>
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Is an Upgrade or Downgrade possible between the VPS Hosting Plans?</a>
-              <div class="acco-des">Yes, you can now easily upgrade your plan from the control panel by simply selecting the new plan and paying. The amount you have already paid for the current plan will get adjusted on a pro rate basis. Currently, this upgrade option is available only on our India based servers. The downgrade option is not available for any of the KVM VPS plans/servers at this time.</div>
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Can I upgrade my VPS?
+            </a>
+              <div class="acco-des">Definitely. Our Prohost VPS hosting platform is scalable. It allows you to add more RAM to your existing plan – or upgrade your plan to higher CPU, RAM and storage with just a click — no more manual migrations.</div>
             </div>
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Do you have managed services for VPS hosting??</a>
-              <div class="acco-des">Yes. We have Managed VPS Hosting services available for our new & existing customers. Managed hosting services can be purchased as an add-on feature with your server.</div>
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Can I host several websites on a VPS?</a>
+              <div class="acco-des">You bet. With VPS Hosting, you create and manage multiple sites for your clients on a single VPS. Additionally, when using cPanel/WHM on your server, you can install multiple cPanel accounts and configure specific (RAM and storage) resources for each hosting account — then charge your client accordingly.
+              </div>
             </div>
           </div>
         </div>
