--- a/cloud-vps-server.html
+++ b/cloud-vps-server.html
@@ -128,23 +128,23 @@
         </div>
         <div class="col-md-6 col-lg-3 m-15px-tb">
           <div class="p-25px-tb p-25px-lr hover-top hover-rotate white-bg text-center border-radius-5 card align-items-center">
-            <div class="ef-2 icon-80 theme-bg border-radius-50 theme-color d-inline-block m-30px-b hr-rotate-after"> <i class="fas fa-battery-full white-color"></i> </div>
-            <h5 class="h6 m-10px-b">Fully Managed</h5>
-            <p class="m-0px">We run your server so you can run your business. This means that we provide full support and management for your server.</p>
+            <div class="ef-2 icon-80 theme-bg border-radius-50 theme-color d-inline-block m-30px-b hr-rotate-after"> <i class="fas fa-edit white-color"></i> </div>
+            <h5 class="h6 m-10px-b">Completely Customizable</h5>
+            <p class="m-0px">No matter your level of tech-savviness, your VPS comes customized. Choose your Operating System (Ubuntu, CentOS or Debian)</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 m-15px-tb">
           <div class="p-25px-tb p-25px-lr hover-top hover-rotate white-bg text-center border-radius-5 card align-items-center">
-            <div class="ef-2 icon-80 theme-bg border-radius-50 theme-color d-inline-block m-30px-b hr-rotate-after"> <i class="white-color fas fa-globe-europe"></i> </div>
-            <h5 class="h6 m-10px-b"> Cpanel/WHM Included</h5>
-            <p class="m-0px">All our Servers come with a cPanel/WHM Installed and Configured and included cPanel license. You need to select cPanel license in order form.</p>
+            <div class="ef-2 icon-80 theme-bg border-radius-50 theme-color d-inline-block m-30px-b hr-rotate-after"> <i class="white-color fas fa-tachometer-alt"></i> </div>
+            <h5 class="h6 m-10px-b">High Performance</h5>
+            <p class="m-0px">We use only top quality hardware, and this reflects in the quality service. We are using Enterprise SSD hard drives that extra speed boost!</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 m-15px-tb">
           <div class="p-25px-tb p-25px-lr hover-top hover-rotate white-bg text-center border-radius-5 card align-items-center">
             <div class="ef-2 icon-80 theme-bg border-radius-50 theme-color d-inline-block m-30px-b hr-rotate-after"> <i class="white-color fas fa-desktop"></i> </div>
-            <h5 class="h6 m-10px-b">Total security as standard</h5>
-            <p class="m-0px">Our servers are secured to the highest possible standards, using hardware and software firewalls alongside our own in-house security package.</p>
+            <h5 class="h6 m-10px-b">Full Root Access</h5>
+            <p class="m-0px">The full power of the server! Having root access to the server gives you the ability to take full control of your server.</p>
           </div>
         </div>
       </div>
@@ -247,16 +247,16 @@
           <div class="card media flex-row border-radius-15 p-15px box-shadow-only-hover hover-top">
             <div class="icon-50 green-bg-alt green-color border-radius-50"> <i class="ion ion-md-checkmark"></i> </div>
             <div class="media-body p-20px-l align-self-center">
-              <h6 class="m-5px-b">Lightning Fast Websites</h6>
-              <span>Super-quick page loads</span> </div>
+              <h6 class="m-5px-b">Easy Upgrade</h6>
+              <span>Upgrade plan without downtime</span> </div>
           </div>
         </div>
         <div class="col-sm-6 col-lg-4 m-10px-tb">
           <div class="card media flex-row border-radius-15 p-15px box-shadow-only-hover hover-top">
             <div class="icon-50 green-bg-alt green-color border-radius-50"> <i class="ion ion-md-checkmark"></i> </div>
             <div class="media-body p-20px-l align-self-center">
-              <h6 class="m-5px-b">Free cPanel</h6>
-              <span>Hosting Management simplified</span> </div>
+              <h6 class="m-5px-b">Terminal access</h6>
+              <span>Full Hosting Management</span> </div>
           </div>
         </div>
         <div class="col-sm-6 col-lg-4 m-10px-tb">
