--- a/shared-hosting.html
+++ b/shared-hosting.html
@@ -102,7 +102,7 @@
           <p class="lead white-color-light">At ProHost, we understand the importance of page loading speed, security and fast customer support. So we are using high performance cutting-edge pure SSD web hosting package</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/hosting2.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/welcome-ten-banner-image1.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
