small issue fix

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="p-10px-t"> <a class="m-btn m-btn-theme m-btn-radius m-btn-wide m-5px-lr" href="#"><span class="btn-inner--text">Buy Now</span></a> <a class="m-btn m-btn-t-theme m-btn-radius m-btn-wide m-5px-lr" href="#"><span class="btn-inner--text">Learn More</span></a> </div>
           </div>
         </div>
-        <div class="col-lg-6 text-center"> <img src="images/home-banner.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-6 text-center"> <img src="images/welcome-ten-banner-image1.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color gray-color">
