--- a/Microsoft-Office-365.html
+++ b/Microsoft-Office-365.html
@@ -104,9 +104,16 @@
     <div class="container">
       <div class="row justify-content-between align-items-center p-100px-t full-screen">
         <div class="col-lg-7 p-30px-tb">
-          <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">ProHost</span> Email Hosting</div>
-          <h2 class="display-4 white-color m-25px-b">Get a Professional Email @yourdomain for your business.</h2>
-          <p class="lead white-color-light">Prohost email hosting business can ensure that their emails are delivered quickly and securely. Prohost not only offers stable and secure email hosting, but also provides additional features such as spam filtering, data protection, and storage capacity.</p>
+          <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">ProHost</span> Microsoft Office 365
+          </div>
+          <h2 class="display-4 white-color m-25px-b">What is Microsoft 365 Business?
+          </h2>
+          <p class="lead white-color-light">Boost productivity with Office 365 in UAE. A comprehensive, intelligent, and secure cloud-based solution for seamless work, regardless of location.<br>Unlock productivity potential with Microsoft Office 365. Enjoy a world-class email experience on any device for enhanced communication.
+
+
+
+
+          </p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
         <div class="col-lg-5 text-center m-15px-tb"> <img src="images/vps-server.png" class="max-width-140" title="" alt=""> </div>
@@ -127,7 +134,7 @@
             <h6 class="theme-color m-20px-b theme-bg-alt p-15px-lr p-5px-tb d-inline-block border-radius-5 font-small">OUR SERVICES</h6>
             <h3 class="display-4 m-25px-b">Businesses
               <mark>Solution</mark> of All Size</h3>
-            <p class="m-0px font-2">Prohost is a popular web hosting service provider. Prohost provides Shared Hosting, Business Hosting, Reseller Hosting, VPS, Dedicated Server, SQL Hosting, Email Hosting, domain Registration-Transfer & Other Web development services.</p>
+            <p class="m-0px font-2">Switch to Microsoft 365 for efficient operations. It offers feature-rich apps, robust cloud services, and strong security, safeguarding your organization from cyber threats. Boost productivity with the perfect solution.</p>
           </div>
         </div>
         <!--tab section-->
@@ -144,64 +151,90 @@
               <div class="price-table-02 hover-top box-shadow-hover card">
                 <div class="pt-head d-flex align-items-center justify-content-between">
                   <div class="pth-left">
-                    <h4>Business 5</h4>
+                    <h4>BUSINESS BASIC
+                    </h4>
                     <span></span> </div>
                   <div class="pth-right">
-                    <h5 class="theme-color"><span>SAR</span>40</h5>
+                    <h5 class="theme-color"><span>SAR</span>26.50
+                    </h5>
                     <label>Per Anually</label>
                   </div>
                 </div>
                 <div class="pt-body">
-                  <ul class="list-type-01 theme">
+                  <p class="row justify-content-center text-center">Up to 300 Users
+
+                  </p>
+                  <p class="row justify-content-center text-center">Ideal for businesses that need business email and other business services on PC, Mac, or mobile. Desktop versions of Office apps not included.
+
+                  </p>
+                 <!-- <ul class="list-type-01 theme">
                     <li><i class="fas fa-check"></i> 5 Email Accounts</li>
                     <li><i class="fas fa-check"></i> cPanel Access</li>
                     <li><i class="fas fa-check"></i> POP3 / IMAP / SMTP</li>
-                  </ul>
+                  </ul>-->
                 </div>
-                <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/email-hosting/business-5">Buy Now</a> </div>
+                <div class="pt-footer row justify-content-center text-center"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/email-hosting/business-5">Buy Now</a> </div>
               </div>
             </div>
             <div class="col-lg-4 m-15px-tb">
               <div class="price-table-02 hover-top box-shadow-hover card">
                 <div class="pt-head d-flex align-items-center justify-content-between">
                   <div class="pth-left">
-                    <h4>Business 10</h4>
+                    <h4>BUSINESS STANDARD
+
+                    </h4>
                     <span></span> </div>
                   <div class="pth-right">
-                    <h5 class="theme-color"><span>SAR</span>450</h5>
-                    <label>Per Annually</label>
+                    <h5 class="theme-color"><span>SAR</span>55.00
+
+                    </h5>
+                    <label>Per Anually</label>
                   </div>
                 </div>
                 <div class="pt-body">
-                  <ul class="list-type-01 theme">
-                    <li><i class="fas fa-check"></i> 10 Email Accounts</li>
+                  <p class="row justify-content-center text-center">Up to 300 Users
+
+                  </p>
+                  <p class="row justify-content-center text-center">Ideal for businesses that need business email, Office apps, and other business services on PC, Mac, or mobile.
+
+                  </p>
+                 <!-- <ul class="list-type-01 theme">
+                    <li><i class="fas fa-check"></i> 5 Email Accounts</li>
                     <li><i class="fas fa-check"></i> cPanel Access</li>
                     <li><i class="fas fa-check"></i> POP3 / IMAP / SMTP</li>
-                  </ul>
+                  </ul>-->
                 </div>
-                <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/email-hosting/business-10">Buy Now</a> </div>
+                <div class="pt-footer row justify-content-center text-center"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/email-hosting/business-5">Buy Now</a> </div>
               </div>
             </div>
             <div class="col-lg-4 m-15px-tb">
               <div class="price-table-02 hover-top box-shadow-hover card">
                 <div class="pt-head d-flex align-items-center justify-content-between">
                   <div class="pth-left">
-                    <h4>Business 25</h4>
-                    <span></span> 
-                  </div>
+                    <h4>BUSINESS PREMIUM
+
+                    </h4>
+                    <span></span> </div>
                   <div class="pth-right">
-                    <h5 class="theme-color"><span>SAR</span>100</h5>
-                    <label>Per Month</label>
+                    <h5 class="theme-color"><span>SAR</span>97.00
+                    </h5>
+                    <label>Per Anually</label>
                   </div>
                 </div>
                 <div class="pt-body">
-                  <ul class="list-type-01 theme">
-                    <li><i class="fas fa-check"></i> 25 Email Accounts</li>
+                  <p class="row justify-content-center text-center">Up to 300 Users
+
+                  </p>
+                  <p class="row justify-content-center text-center">Best for businesses that need everything included in Business Standard plus advanced cyberthreat protection and device management.
+
+                  </p>
+                 <!-- <ul class="list-type-01 theme">
+                    <li><i class="fas fa-check"></i> 5 Email Accounts</li>
                     <li><i class="fas fa-check"></i> cPanel Access</li>
                     <li><i class="fas fa-check"></i> POP3 / IMAP / SMTP</li>
-                  </ul>
+                  </ul>-->
                 </div>
-                <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/email-hosting/business-25">Buy Now</a> </div>
+                <div class="pt-footer row justify-content-center text-center"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/email-hosting/business-5">Buy Now</a> </div>
               </div>
             </div>
             </div>
@@ -214,64 +247,97 @@
               <div class="price-table-02 hover-top box-shadow-hover card">
                 <div class="pt-head d-flex align-items-center justify-content-between">
                   <div class="pth-left">
-                    <h4>Business 5</h4>
+                    <h6>ENTERPRISE E1
+
+
+                    </h6>
                     <span></span> </div>
                   <div class="pth-right">
-                    <h5 class="theme-color"><span>SAR</span>150</h5>
+                    <h5 class="theme-color"><span>SAR</span>36.50
+
+                    </h5>
                     <label>Per Anually</label>
                   </div>
                 </div>
                 <div class="pt-body">
-                  <ul class="list-type-01 theme">
+                  <p class="row justify-content-center text-center">Unlimited Users
+
+
+                  </p>
+                  <p class="row justify-content-center text-center">E1 package includes email, file storage, and sharing, Office Online, meetings and IM, and more. Office 365 Suite for desktop and mobile is not included.
+
+                  </p>
+                 <!-- <ul class="list-type-01 theme">
                     <li><i class="fas fa-check"></i> 5 Email Accounts</li>
                     <li><i class="fas fa-check"></i> cPanel Access</li>
                     <li><i class="fas fa-check"></i> POP3 / IMAP / SMTP</li>
-                  </ul>
+                  </ul>-->
                 </div>
-                <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/email-hosting/business-5">Buy Now</a> </div>
+                <div class="pt-footer row justify-content-center text-center"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/email-hosting/business-5">Buy Now</a> </div>
               </div>
             </div>
             <div class="col-lg-4 m-15px-tb">
               <div class="price-table-02 hover-top box-shadow-hover card">
                 <div class="pt-head d-flex align-items-center justify-content-between">
                   <div class="pth-left">
-                    <h4>Business 10</h4>
+                    <h6>ENTERPRISE E3
+
+
+                    </h6>
                     <span></span> </div>
                   <div class="pth-right">
-                    <h5 class="theme-color"><span>SAR</span>100</h5>
-                    <label>Per Annually</label>
+                    <h5 class="theme-color"><span>SAR</span>84.00
+                    </h5>
+                    <label>Per Anually</label>
                   </div>
                 </div>
                 <div class="pt-body">
-                  <ul class="list-type-01 theme">
-                    <li><i class="fas fa-check"></i> 10 Email Accounts</li>
+                  <p class="row justify-content-center text-center">Unlimited Users
+
+
+                  </p>
+                  <p class="row justify-content-center text-center">E3 package includes all the features of the Office 365 E1 package and security and compliance tools such as legal hold, data loss prevention, and more.
+
+                  </p>
+                 <!-- <ul class="list-type-01 theme">
+                    <li><i class="fas fa-check"></i> 5 Email Accounts</li>
                     <li><i class="fas fa-check"></i> cPanel Access</li>
                     <li><i class="fas fa-check"></i> POP3 / IMAP / SMTP</li>
-                  </ul>
+                  </ul>-->
                 </div>
-                <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/email-hosting/business-10">Buy Now</a> </div>
+                <div class="pt-footer row justify-content-center text-center"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/email-hosting/business-5">Buy Now</a> </div>
               </div>
             </div>
             <div class="col-lg-4 m-15px-tb">
               <div class="price-table-02 hover-top box-shadow-hover card">
                 <div class="pt-head d-flex align-items-center justify-content-between">
                   <div class="pth-left">
-                    <h4>Business 25</h4>
-                    <span></span> 
-                  </div>
+                    <h6>ENTERPRISE E5
+
+
+                    </h6>
+                    <span></span> </div>
                   <div class="pth-right">
-                    <h5 class="theme-color"><span>SAR</span>200</h5>
-                    <label>Per Month</label>
+                    <h5 class="theme-color"><span>SAR</span>150.00
+
+                    </h5>
+                    <label>Per Anually</label>
                   </div>
                 </div>
                 <div class="pt-body">
-                  <ul class="list-type-01 theme">
-                    <li><i class="fas fa-check"></i> 25 Email Accounts</li>
+                  <p class="row justify-content-center text-center">Unlimited Users
+
+                  </p>
+                  <p class="row justify-content-center text-center">E5 includes all the features of the Office 365 E3 package and advanced security, analytics, and voice capabilities.
+
+                  </p>
+                 <!-- <ul class="list-type-01 theme">
+                    <li><i class="fas fa-check"></i> 5 Email Accounts</li>
                     <li><i class="fas fa-check"></i> cPanel Access</li>
                     <li><i class="fas fa-check"></i> POP3 / IMAP / SMTP</li>
-                  </ul>
+                  </ul>-->
                 </div>
-                <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/email-hosting/business-25">Buy Now</a> </div>
+                <div class="pt-footer row justify-content-center text-center"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/email-hosting/business-5">Buy Now</a> </div>
               </div>
             </div>
             </div>
