why u don't find my update

--- a/cloud-vps-server.html
+++ b/cloud-vps-server.html
@@ -82,7 +82,14 @@
                 <li><a href="server-management.html">Server Management & Monitoring</a></li>
               </ul>
             </li>
-            <li class="nav-item"><a class="nav-link" href="email-hosting.html">Email Hosting</a></li>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#"> Email & Collaboration</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+              <ul class="px-dropdown-menu mm-dorp-in">
+                <li><a href="Microsoft-Office-365.html">Microsoft Office 365
+                </a></li>
+                <li><a href="Google-Workspace.html">Google Workspace</a></li>
+                <li><a href="email-hosting.html">Email Hosting</a></li>
+              </ul>
+            </li>
           </ul>
           <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> 
         </div>
@@ -503,7 +510,7 @@
             <p class="font-small m-0px"><b>Sales: </b>sales@prohost.sa</p><br>
             <p class="font-small m-0px"><b>Support: </b>support@prohost.sa</p> <br>
             <p class="font-small m-0px"><b>Mobile: </b>+966550243031(Whatsapp)</p><br>
-            <p class="font-small m-0px"><b>Phone: </b>8002444030</p>
+            <p class="font-small m-0px"><b>Phone: </b>8002472030</p>
           </div>
           
         </div>
