3 images added and fix code

--- a/Google-Workspace.html
+++ b/Google-Workspace.html
@@ -525,7 +525,7 @@
             </p>
           </div>
           <div class="col-lg-6">
-            <div class="card overflow-hidden border-radius-15"> <img src="images/banner-2.png" title="" alt=""> </div>
+            <div class="card overflow-hidden border-radius-15"> <img style="height: auto; width: 250px; margin: auto;" src="images/email2.png" title="" alt=""> </div>
           </div>
         </div>
       </div>
