--- a/Microsoft-Office-365.html
+++ b/Microsoft-Office-365.html
@@ -885,7 +885,7 @@
           
           </div>
           <div class="col-lg-6">
-            <div class="card overflow-hidden border-radius-15"> <img src="images/banner-2.png" title="" alt=""> </div>
+            <div class="card overflow-hidden border-radius-15"> <img src="images/email1.png" title="" alt=""> </div>
           </div>
         </div>
       </div>
