index file edit and images replace

--- a/index.html
+++ b/index.html
@@ -239,6 +239,18 @@
             <h5 class="m-0px theme-color-alt">Colocation</h5>
           </div></a>
         </div>
+        <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
+          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+            <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fab fa-microsoft"></i></div>
+            <h5 class="m-0px theme-color-alt">Microsoft 365</h5>
+          </div></a>
+        </div>
+        <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
+          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+            <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fab fa-google"></i></div>
+            <h5 class="m-0px theme-color-alt">Google Workspace</h5>
+          </div></a>
+        </div>
       </div>
     </div>
   </section>
@@ -406,7 +418,7 @@
     <div class="container">
       <div class="row md-m-25px-b m-45px-b justify-content-center text-center">
         <div class="col-lg-8">
-          <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">Built for speed</h6>
+          <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">www.prohost.</h6>
           <h3 class="display-4 m-25px-b font-alt">DATA CENTER INFRASTRUCTURE</h3>
           <p class="m-0px lead">Our Data Centers’ development has taken place in proprietary facilities, using high-class equipment, and in accordance with all international certifications and standards</p>
         </div>
@@ -461,7 +473,7 @@
         <div class="row justify-content-between">
           <div class="col-lg-5 align-self-center lg-m-40px-b">
             <h6 class="theme-color m-20px-b theme-bg-alt p-15px-lr p-5px-tb d-inline-block border-radius-5 font-small">Simple and intuitive</h6>
-            <h3 class="h1 m-15px-b">ProHost for <mark>Professional </mark>reliable hosting service</h3>
+            <h3 class="h2 m-15px-b">ProHost for <mark>Professional </mark>reliable hosting service</h3>
             <p class="m-0px font-2">High-performance Servers for Faster Websites & Applications. High-speed Upgradable SSD Storage, Instant Provisioning, Full Root Access. </p>
             <div class="p-15px-t">
               <div class="media align-items-center p-15px-t">
@@ -488,7 +500,7 @@
         <div class="row justify-content-between flex-row-reverse">
           <div class="col-lg-5 align-self-center lg-m-40px-b">
             <h6 class="theme-color m-20px-b theme-bg-alt p-15px-lr p-5px-tb d-inline-block border-radius-5 font-small">Online Starter Bundle</h6>
-            <h3 class="h1 m-15px-b">ProHost for <mark>web hosting </mark> and Cloud Solutions.</h3>
+            <h3 class="h2 m-15px-b">ProHost for <mark>web hosting </mark> and Cloud Solutions.</h3>
             <p class="m-0px font-2">Powered by 24/7/365 with ProHost with four different ways to connect with us and ask for help through technical support tickets, email, instant chat or a unified phone. We provide various explanations to solve your problems through the ProHost Blog to be able to Solve problems or combinations yourself</p>
             <div class="p-15px-t">
               <div class="media align-items-center p-15px-t">
