cybersecturiy page update

--- a/cyber-security.html
+++ b/cyber-security.html
@@ -116,7 +116,7 @@
             seamless data security</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/hosting12.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/hosting15.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
@@ -188,11 +188,10 @@
         <div class="row justify-content-between">
           <div class="col-lg-5 align-self-center lg-m-40px-b">
             <h6 class="theme-color m-20px-b theme-bg-alt p-15px-lr p-5px-tb d-inline-block border-radius-5 font-small">Simple and intuitive</h6>
-            <h3 class="h1 m-15px-b">Proactively 
+            <h3 class="h2 m-15px-b">Proactively 
               identify potential 
                 <mark>cyberattacks, </mark>then 
                 thwart them.</h3>
-            <p class="m-0px font-2">WE FOCUS ON:</p>
             <div class="p-15px-t">
               <div class="media align-items-center p-15px-t">
                 <div class="icon-30 theme2nd-bg white-color border-radius-50"> <i class="fa fa-check"></i> </div>
@@ -228,10 +227,10 @@
               </div>
               
             </div>
-            <div class="p-25px-t"> <a class="m-btn m-btn-theme m-btn-radius" href="#">Learn More</a> </div>
+            <!--<div class="p-25px-t"> <a class="m-btn m-btn-theme m-btn-radius" href="#">Learn More</a> </div> -->
           </div>
           <div class="col-lg-6">
-            <div class="card overflow-hidden border-radius-15"> <img src="images/banner-2.png" title="" alt=""> </div>
+            <div class="card overflow-hidden border-radius-15"> <img src="images/hosting12.png" title="" alt=""> </div>
           </div>
         </div>
       </div>
